--- a/src/app/employee-create/employee-create.component.html
+++ b/src/app/employee-create/employee-create.component.html
@@ -1,6 +1,6 @@
 <div class="container custom-container">
   <div class="col-md-12">
-    <h3 class="mb-3 text-center">Create Empleado</h3>
+    <h3 class="mb-3 text-center">Crear Empleado</h3>
 
     <div class="form-group">
       <input type="text" [(ngModel)]="employeeDetails.name" class="form-control" placeholder="Name">
