--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <h5 class="my-0 mr-md-auto font-weight-normal">Admin Empleado</h5>
+  <h5 class="my-0 mr-md-auto font-weight-normal">Admin Empresa</h5>
   <nav class="my-2 my-md-0 mr-md-3">
-    <a class="btn btn-outline-primary" routerLinkActive="active" routerLink="/create-employee">Crear Empleado</a>
+    <a class="btn btn-outline-primary" routerLinkActive="active" routerLink="/create-empresa">Crear Empresa</a>
   </nav>
-  <a class="btn btn-outline-primary" routerLinkActive="active" routerLink="/employees-list">Lista de Empleados</a>
+  <a class="btn btn-outline-primary" routerLinkActive="active" routerLink="/empresa-list">Lista de Empresa</a>
 </div>
 
 <router-outlet></router-outlet>
