--- a/src/app/empresa-create/empresa-create.component.html
+++ b/src/app/empresa-create/empresa-create.component.html
@@ -1,21 +1,21 @@
 <div class="container custom-container">
   <div class="col-md-12">
-    <h3 class="mb-3 text-center">Crear Empleado</h3>
+    <h3 class="mb-3 text-center">Crear Empresa</h3>
 
     <div class="form-group">
-      <input type="text" [(ngModel)]="employeeDetails.name" class="form-control" placeholder="Name">
+      <input type="text" [(ngModel)]="empresaDetails.name" class="form-control" placeholder="Name">
     </div>
 
     <div class="form-group">
-      <input type="text" [(ngModel)]="employeeDetails.email" class="form-control" placeholder="Email">
+      <input type="text" [(ngModel)]="empresaDetails.email" class="form-control" placeholder="Email">
     </div>
 
     <div class="form-group">
-      <input type="text" [(ngModel)]="employeeDetails.phone" class="form-control" placeholder="Phone">
+      <input type="text" [(ngModel)]="empresaDetails.phone" class="form-control" placeholder="Phone">
     </div>
 
     <div class="form-group">
-      <button class="btn btn-success btn-lg btn-block" (click)="addEmployee()">Create Employee</button>
+      <button class="btn btn-success btn-lg btn-block" (click)="addEmployee()">Crear Empresa</button>
     </div>
 
   </div>
