--- a/src/app/empresa-edit/empresa-edit.component.html
+++ b/src/app/empresa-edit/empresa-edit.component.html
@@ -1,22 +1,22 @@
 <div class="container custom-container">
   <div class="col-md-12">
     
-    <h3 class="mb-3 text-center">Update Employee</h3>
+    <h3 class="mb-3 text-center">Update Empresa</h3>
 
     <div class="form-group">
-      <input type="text" [(ngModel)]="employeeData.name" class="form-control" placeholder="Name">
+      <input type="text" [(ngModel)]="empresaData.name" class="form-control" placeholder="Name">
     </div>
 
     <div class="form-group">
-      <input type="text" [(ngModel)]="employeeData.email" class="form-control" placeholder="Email">
+      <input type="text" [(ngModel)]="empresaData.email" class="form-control" placeholder="Email">
     </div>
 
     <div class="form-group">
-      <input type="text" [(ngModel)]="employeeData.phone" class="form-control" placeholder="Phone">
+      <input type="text" [(ngModel)]="empresaData.phone" class="form-control" placeholder="Phone">
     </div>
 
     <div class="form-group">
-      <button class="btn btn-success btn-lg btn-block" (click)="updateEmployee()">Update Employee</button>
+      <button class="btn btn-success btn-lg btn-block" (click)="updateEmpresa()">Update Empresa</button>
     </div>
     
   </div>
