--- a/src/app/empresa-create/empresa-create.component.html
+++ b/src/app/empresa-create/empresa-create.component.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="form-group">
-      <button class="btn btn-success btn-lg btn-block" (click)="addEmployee()">Crear Empresa</button>
+      <button class="btn btn-success btn-lg btn-block" (click)="addEmpresa()">Crear Empresa</button>
     </div>
 
   </div>
