--- a/src/app/servicio-edit/servicio-edit.component.html
+++ b/src/app/servicio-edit/servicio-edit.component.html
@@ -1,22 +1,22 @@
 <div class="container custom-container">
   <div class="col-md-12">
     
-    <h3 class="mb-3 text-center">Update Empresa</h3>
+    <h3 class="mb-3 text-center">Update Servicio</h3>
 
     <div class="form-group">
-      <input type="text" [(ngModel)]="empresaData.name" class="form-control" placeholder="Name">
+      <input type="text" [(ngModel)]="servicioData.name" class="form-control" placeholder="Name">
     </div>
 
     <div class="form-group">
-      <input type="text" [(ngModel)]="empresaData.email" class="form-control" placeholder="Email">
+      <input type="text" [(ngModel)]="servicioData.email" class="form-control" placeholder="Email">
     </div>
 
     <div class="form-group">
-      <input type="text" [(ngModel)]="empresaData.phone" class="form-control" placeholder="Phone">
+      <input type="text" [(ngModel)]="servicioData.phone" class="form-control" placeholder="Phone">
     </div>
 
     <div class="form-group">
-      <button class="btn btn-success btn-lg btn-block" (click)="updateEmpresa()">Update Empresa</button>
+      <button class="btn btn-success btn-lg btn-block" (click)="updateServicio()">Update Servicio</button>
     </div>
     
   </div>
