--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="btn btn-outline-primary" routerLinkActive="active" routerLink="/create-servicio">Crear Servicios </a>
   </nav>
-  <a class="btn btn-outline-primary" routerLinkActive="active" routerLink="/servicio-list">Lista de Servicios</a>
+  <a class="btn btn-outline-primary" routerLinkActive="active" routerLink="/servicios-list">Lista de Servicios</a>
 </div>
 
 <router-outlet></router-outlet>
